syntax = "proto3";

option go_package = ".";

service MessageController {
  rpc PostNewMessage(BodyMessage) returns(Response) {}
  rpc GetChatMessages(Users) returns(ChatUsers) {}
  rpc GetFriendsList(User) returns(FriendList) {}
}

message BodyMessage{
  string from = 1;
  string to = 2;
  string text = 3;
}

message Response{
  bool success = 1;
}

message Users{
  string username = 1;
  string friend = 2;
}

message ChatUsers{
  repeated ChatMessage messages = 1;
}

message ChatMessage{
  BodyMessage msg = 1;
  string date = 2;
}

message User{
  string username = 1;
}

message FriendList{
  repeated Friend friends = 1;
}

message Friend{
  string username = 1;
  string date = 2;
}